Jack is a CSS Wizard.
Jack completed the CSS Gauntlet. GG.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="py-5 bg-light">
         <div class="container">
             <div class="bd-example">
-                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <div id="carouselExampleCaptions" class="carousel slide">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -81,21 +81,21 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="assets/img/stratocasters_demo.jpg" class="d-block mx-auto" style="height: calc(100vh - 152px);">
+                    <img src="assets/img/stratocasters_demo.jpg" class="d-block mx-auto carimagefixer">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img src="assets/img/singuitars_demo.jpg" class="d-block mx-auto">
+                    <img src="assets/img/singuitars_demo.jpg" class="d-block mx-auto carimagefixer">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="assets/img/stratocasters_demo.jpg" class="d-block mx-auto carimagefixer">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -114,6 +114,15 @@
             </div>
         </div>
     </div>
+
+    <footer class="container py-5">
+      <div class="row">
+        <div class="col-5 col-md">
+          <img src="assets/img/phoenixicon.png" style="height:32px;"><strong class="bluestrong">Phoenix</strong>
+          <small class="d-block mb-3 text-muted">Notice: None of the guitars pictured are for sale.</small>
+        </div>
+      </div>
+    </footer>
 
     <script src="assets/dist/js/jquery-3.2.1.slim.min.js"></script>
     <script src="assets/dist/js/popper.min.js"></script>
