Added guitar pictures, doubled the carousel for double the action!
Uploaded guitar images, refined page details, etc.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://plasticrock.gsheps.net">
     <meta property="og:title" content="Phoenix's PlasticRock Collection!">
     <meta property="og:description" content="This site is a total flex, I have way too many CloneHero instruments. Thought I'd show them off.">
-    <meta property="og:image" content="https://plasticrock.gsheps.net/assets/img/pn-logo-sqr.png">
+    <meta property="og:image" content="https://plasticrock.gsheps.net/assets/img/guitar-icon.png">
 
       <!-- Twitter-->
 
@@ -28,7 +28,7 @@
     <meta property="twitter:url" content="https://plasticrock.gsheps.net">
     <meta property="twitter:title" content="Phoenix's PlasticRock Collection!">
     <meta property="twitter:description" content="This site is a total flex, I have way too many CloneHero instruments. Thought I'd show them off.">
-    <meta property="twitter:image" content="https://plasticrock.gsheps.net/assets/img/pn-logo-sqr.png">
+    <meta property="twitter:image" content="https://plasticrock.gsheps.net/assets/img/guitar-icon.png">
     
       <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.ico"/>
@@ -64,62 +64,137 @@
           <div class="container">
             <a class="navbar-brand d-flex align-items-center">
               <img src="assets/img/guitar-icon.png" width="30" height="30" class="me-2"></img>
-              <strong style="color:white;">Phoenix's PlasticRock Instrument Collection</strong>
+              <strong style="color:white;">Phoenix's PlasticRock Collection</strong>
             </a>
           </div>
         </div>
     </header>
-
+    <!-- GUITAR HERO GUITARS-->
     <div class="py-5 bg-light">
         <div class="container">
-            <div class="bd-example">
-                <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="row">
+            <div class="bd-example col-sm">
+                <div id="GuitarHeroCaptions" class="carousel slide">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    <li data-target="#GuitarHeroCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#GuitarHeroCaptions" data-slide-to="1"></li>
+                    <li data-target="#GuitarHeroCaptions" data-slide-to="2"></li>
+                    <li data-target="#GuitarHeroCaptions" data-slide-to="3"></li>
+                    <li data-target="#GuitarHeroCaptions" data-slide-to="4"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="assets/img/stratocasters_demo.jpg" class="d-block mx-auto carimagefixer">
+                    <img src="assets/img/guitars/Midnight-LP.jpg" class="d-block mx-auto carimagefixer">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        <h5>Wii GH3 Les Paul (Painted Midnight Blue)</h5>
+                        <p>My first guitar, I played it to death!</p>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img src="assets/img/singuitars_demo.jpg" class="d-block mx-auto carimagefixer">
+                    <img src="assets/img/guitars/Water-LP.jpg" class="d-block mx-auto carimagefixer">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h5>Wii GH3 Les Paul (Hydrodipped)</h5>
+                        <p>My second guitar, and my first attempt at hydrodipping.</p>
                     </div>
                     </div>
                     <div class="carousel-item">
-                    <img src="assets/img/stratocasters_demo.jpg" class="d-block mx-auto carimagefixer">
+                    <img src="assets/img/guitars/Blue-LP.jpg" class="d-block mx-auto carimagefixer">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        <h5>Wii GH3 Les Paul (Painted Ink Blue)</h5>
+                        <p>My third guitar, my first with custom-printed frets!</p>
                     </div>
                     </div>
+                    <div class="carousel-item">
+                      <img src="assets/img/guitars/BFlannel-Genericaster.jpg" class="d-block mx-auto carimagefixer">
+                      <div class="carousel-caption d-none d-md-block">
+                          <h6>Wii GH5 "Genericaster" (With Blue Flannel Facade)</h6>
+                          <p>My fourth guitar, I killed this one too. Kinda works.</p>
+                      </div>
+                      </div>
+                    <div class="carousel-item">
+                      <img src="assets/img/guitars/Ugly-LP.jpg" class="d-block mx-auto carimagefixer">
+                      <div class="carousel-caption d-none d-md-block">
+                          <h5>Xbox 360 GH3 Les Paul (Scrapheap)</h5>
+                          <p>Bought this one to scrap for parts for my other Les Pauls.</p>
+                      </div>
+                      </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#GuitarHeroCaptions" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#GuitarHeroCaptions" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
                 </div>
             </div>
+            <!-- ROCKBAND GUITARS-->
+            <div class="bd-example col-sm">
+              <div id="RockbandCaptions" class="carousel slide">
+              <ol class="carousel-indicators">
+                  <li data-target="#RockbandCaptions" data-slide-to="0" class="active"></li>
+                  <li data-target="#RockbandCaptions" data-slide-to="1"></li>
+                  <li data-target="#RockbandCaptions" data-slide-to="2"></li>
+                  <li data-target="#RockbandCaptions" data-slide-to="3"></li>
+                  <li data-target="#RockbandCaptions" data-slide-to="4"></li>
+              </ol>
+              <div class="carousel-inner">
+                  <div class="carousel-item active">
+                  <img src="assets/img/guitars/RB1Wired-Strat.jpg" class="d-block mx-auto carimagefixer">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h5>Xbox 360 RB1 Wired Stratocaster</h5>
+                      <p>My stratocaster! Fitted with an SFP!</p>
+                  </div>
+                  </div>
+                  <div class="carousel-item">
+                  <img src="assets/img/guitars/PS3RB3-Strat.jpg" class="d-block mx-auto carimagefixer">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h5>PS3 RB3 Wireless Stratocaster</h5>
+                      <p>My second stratocaster, again fitted with an SFP.</p>
+                  </div>
+                  </div>
+                  <div class="carousel-item">
+                  <img src="assets/img/guitars/RB3Wii-BlueStrat.jpg" class="d-block mx-auto carimagefixer">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h5>Wii RB3 Wireless Stratocaster, Blue Special Edition</h5>
+                      <p>My third, and most coveted stratocaster. Of course it has an SFP! Took forever to find one!</p>
+                  </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/guitars/RB3-PrecisionBass.jpg" class="d-block mx-auto carimagefixer">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h6>Wii RB3 Precison Bass (Donor)</h6>
+                        <p>My fourth stratocaster, worthless as the dongle is extremely rare. But a good donor!</p>
+                    </div>
+                    </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/guitars/RB2-PrecisionBass.jpg" class="d-block mx-auto carimagefixer">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Xbox 360 RB2 Wired Precision Bass</h5>
+                        <p>I don't have this one yet! But I will soon, it's on it's way!</p>
+                    </div>
+                    </div>
+              </div>
+              <a class="carousel-control-prev" href="#RockbandCaptions" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#RockbandCaptions" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+              </a>
+              </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <footer class="container py-5">
       <div class="row">
         <div class="col-5 col-md">
           <img src="assets/img/phoenixicon.png" style="height:32px;"><strong class="bluestrong">Phoenix</strong>
-          <small class="d-block mb-3 text-muted">Notice: None of the guitars pictured are for sale.</small>
+          <small class="d-block mb-3 text-muted">Notice: None of the plastic instruments pictured are for sale.</small>
         </div>
       </div>
     </footer>
