Don't forget the GHL guitar you dummy!
Almost forgot!

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <li data-target="#GuitarHeroCaptions" data-slide-to="2"></li>
                     <li data-target="#GuitarHeroCaptions" data-slide-to="3"></li>
                     <li data-target="#GuitarHeroCaptions" data-slide-to="4"></li>
+                    <li data-target="#GuitarHeroCaptions" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -109,6 +110,13 @@
                       <div class="carousel-caption d-none d-md-block">
                           <h6>Wii GH5 "Genericaster" (With Blue Flannel Facade)</h6>
                           <p>My fourth guitar, I killed this one too. Kinda works.</p>
+                      </div>
+                      </div>
+                      <div class="carousel-item">
+                      <img src="assets/img/guitars/GHL-360.jpg" class="d-block mx-auto carimagefixer">
+                      <div class="carousel-caption d-none d-md-block">
+                          <h6>Guitar Hero Live</h6>
+                          <p>6 Fret is cool, <em>I guess.</em> ¯\_(ツ)_/¯</p>
                       </div>
                       </div>
                     <div class="carousel-item">
