Upload Picture of Precision Bass #2, Edit Index.

--- a/index.html
+++ b/index.html
@@ -172,15 +172,15 @@
                   <div class="carousel-item">
                     <img src="assets/img/guitars/RB3-PrecisionBass.jpg" class="d-block mx-auto carimagefixer">
                     <div class="carousel-caption d-none d-md-block">
-                        <h6>Wii RB3 Precison Bass (Donor)</h6>
-                        <p>My fourth stratocaster, worthless as the dongle is extremely rare. But a good donor!</p>
+                        <h6>Wii RB3 Precison Bass</h6>
+                        <p>My first precision bass, worthless as the dongle is extremely rare.</p>
                     </div>
                     </div>
                   <div class="carousel-item">
                     <img src="assets/img/guitars/RB2-PrecisionBass.jpg" class="d-block mx-auto carimagefixer">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Xbox 360 RB2 Wired Precision Bass</h5>
-                        <p>I don't have this one yet! But I will soon, it's on it's way!</p>
+                        <p>My second precision bass, works alright, the frets play like a RB1 Strat.</p>
                     </div>
                     </div>
               </div>
