--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                   <li data-target="#RockbandCaptions" data-slide-to="2"></li>
                   <li data-target="#RockbandCaptions" data-slide-to="3"></li>
                   <li data-target="#RockbandCaptions" data-slide-to="4"></li>
+                  <li data-target="#RockbandCaptions" data-slide-to="5"></li>
               </ol>
               <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -181,6 +182,13 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Xbox 360 RB2 Wired Precision Bass</h5>
                         <p>My second precision bass, works alright, the frets play like a RB1 Strat.</p>
+                    </div>
+                    </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/guitars/RB4-Jaguar.jpg" class="d-block mx-auto carimagefixer">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>PS4 RB4 Jaguar</h5>
+                        <p>One of the rarest, and most expensive Rockband guitars to obtain in my collection.</p>
                     </div>
                     </div>
               </div>
