--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <li data-target="#GuitarHeroCaptions" data-slide-to="3"></li>
                     <li data-target="#GuitarHeroCaptions" data-slide-to="4"></li>
                     <li data-target="#GuitarHeroCaptions" data-slide-to="5"></li>
+                    <li data-target="#GuitarHeroCaptions" data-slide-to="6"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -112,6 +113,13 @@
                           <p>My fourth guitar, I killed this one too. Kinda works.</p>
                       </div>
                       </div>
+                    <div class="carousel-item">
+                    <img src="assets/img/guitars/Xplorer-360.jpg" class="d-block mx-auto carimagefixer">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Xbox 360 GH2 Xplorer</h5>
+                        <p><em>An absolute classic.</em></p>
+                    </div>
+                    </div>
                       <div class="carousel-item">
                       <img src="assets/img/guitars/GHL-360.jpg" class="d-block mx-auto carimagefixer">
                       <div class="carousel-caption d-none d-md-block">
